fixed overflow hero

--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,6 @@
 .hero {
     position: relative;
+    overflow: hidden;
 }
 
 .hero__video-block {
